--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ html {
 body {
     font-family: "Rosa Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     font-weight: 300;
+    line-height: 1.5;
     margin: 0 0 3rem 0;
     transition: opacity 2s ease-in-out;
 }
@@ -125,7 +126,7 @@ section {
     align-items: center;
     justify-content: center;
     position: relative;
-    height: calc(8rem + 50vw);
+    height: calc(12rem + 50vw);
     width: 100%;
 }
 
@@ -170,7 +171,7 @@ section {
 }
 
 #price-tracker .card-background {
-    background: url("img/pricetracker.svg") center center/cover;
+    background: url("img/pricetracker_square.svg") center center/cover;
 }
 
 #infection-simulator .card-background {
@@ -332,7 +333,7 @@ footer a:hover {
 
     .card {
         justify-content: space-between;
-        height: 16rem;
+        height: 24rem;
         margin: 2rem 0;
     }
 
@@ -370,6 +371,13 @@ footer a:hover {
     .card-text {
         font-size: 1rem;
         text-align: start;
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    #price-tracker .card-background {
+        background: url("img/pricetracker.svg") center center/cover;
     }
 }
 
