--- a/styles.css
+++ b/styles.css
@@ -53,9 +53,6 @@ nav {
 a {
     color: #7f7f7f;
     text-decoration: none;
-    transition: background 80ms ease-in-out,
-    color 80ms ease-in-out,
-    opacity 80ms ease-in-out;
 }
 
 section {
@@ -94,17 +91,35 @@ section {
 }
 
 .btn {
+    background: #3f3f3f;
     border: 0;
     color: #ffffff;
+    cursor: pointer;
     display: flex;
     align-items: center;
     font-family: "Roboto Mono", monospace;
+    font-size: 1rem;
     font-weight: 300;
+    line-height: unset;
     padding: 0.5em 1em;
 }
 
+.btn:hover {
+    background: #000000;
+}
+
+.btn:disabled {
+    background: #bfbfbf;
+    cursor: unset;
+}
+
+a, .btn {
+    transition: background 80ms ease-in-out,
+    color 80ms ease-in-out,
+    opacity 80ms ease-in-out;
+}
+
 .my-projects-btn {
-    background: #3f3f3f;
     margin-top: calc(1rem + 5vw);
     padding-right: 0.5em;
     transition: background 80ms ease-in-out,
@@ -224,6 +239,44 @@ section {
     background: #9b3823;
 }
 
+
+#contact p {
+    text-align: center;
+    width: calc(5rem + 48vw);
+    max-width: 30rem;
+}
+
+#contactForm {
+    margin-bottom: 2rem;
+    width: calc(8rem + 48vw);
+    max-width: 32rem;
+}
+
+#contactForm > div {
+    display: flex;
+    flex-direction: column;
+    margin: 1.5rem 0;
+}
+
+form label {
+    margin: 0.25em 0;
+}
+
+form input, form textarea {
+    border: 1px solid #7f7f7f;
+    border-radius: 0;
+    font-family: "Rosa Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 1rem;
+    padding: 0.75em;
+}
+
+.success {
+    color: #5f9b23;
+}
+
+.error {
+    color: #9b3823;
+}
 
 .copy-text {
     border: 1px solid #3f3f3f;
