--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
 @font-face {
-    font-family: "Rosa Sans";
-    font-style: light;
-    font-weight: 300;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 900;
     font-display: swap;
-    src: local("Rosa Sans"), url("./fonts/RosaSans-Light.woff") format("woff");
+    src: url(./fonts/Inter-Black.woff2) format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(./fonts/Inter-Regular.woff2) format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
@@ -11,8 +21,17 @@
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: url(./fonts/RobotoMono-normal.woff2) format('woff2');
+    src: url(./fonts/RobotoMono-normal.woff2) format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+:root {
+    --secondary-box-shadow: 0.25em 0.25em #7f7f7f7f;
+    --card-btn-margin: 0.2em;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 html {
@@ -20,20 +39,21 @@ html {
 }
 
 body {
-    font-family: "Rosa Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-weight: 300;
+    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: calc(0.3rem + 3vw);
+    font-weight: 400;
     line-height: 1.5;
-    margin: 0 0 3rem 0;
+    margin: 0 0 3em 0;
     transition: opacity 2s ease-in-out;
 }
 
 header {
-    background: #ffffff;
+    background: #fffffff7;
     position: fixed;
     bottom: 0;
-    height: 3rem;
+    height: 3em;
     width: 100%;
-    z-index: 1;
+    z-index: 9;
 }
 
 nav {
@@ -42,8 +62,8 @@ nav {
     justify-content: space-between;
     margin: auto;
     height: 100%;
-    width: calc(10rem + 28vw);
-    max-width: 20rem;
+    width: calc(10em + 28vw);
+    max-width: 20em;
 }
 
 .nav__link:hover {
@@ -63,15 +83,18 @@ section {
 }
 
 .section__title {
-    font-size: calc(1rem + 5vw);
-    margin: calc(1.2rem + 6vw) 0;
+    font-size: 2.5em;
+    font-weight: 900;
+    padding: 1em 0;
+    text-align: center;
+    width: 100%;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 80%;
 }
 
 #hero {
@@ -80,14 +103,15 @@ section {
 }
 
 #name {
-    font-size: calc(0.5rem + 10vw);
+    font-size: 2em;
+    font-weight: 900;
 }
 
 #profession {
     font-family: "Roboto Mono", monospace;
     font-weight: 300;
-    font-size: calc(0.3rem + 3vw);
-    margin: calc(0.3rem + 3vw) 0;
+    font-size: 1em;
+    margin: 1em 0;
 }
 
 .btn {
@@ -98,7 +122,7 @@ section {
     display: flex;
     align-items: center;
     font-family: "Roboto Mono", monospace;
-    font-size: 1rem;
+    font-size: min(1em, 4vw);
     font-weight: 300;
     line-height: unset;
     padding: 0.5em 1em;
@@ -120,14 +144,15 @@ a, .btn {
 }
 
 .my-projects-btn {
-    margin-top: calc(1rem + 5vw);
+    box-shadow: var(--secondary-box-shadow);
+    margin-top: 2em;
     padding-right: 0.5em;
     transition: background 80ms ease-in-out,
     opacity 500ms ease-in-out;
 }
 
 .my-projects-btn:hover {
-    background: #000000;
+    background: #000;
 }
 
 .my-projects-btn svg {
@@ -136,72 +161,38 @@ a, .btn {
     margin-left: 1em;
 }
 
-.card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0;
+.project {
+    background: #fff;
+    margin: 4em 0;
     position: relative;
-    height: calc(12rem + 50vw);
-    width: 100%;
 }
 
-.card-background {
+.project-img {
     height: 100%;
     width: 100%;
+    object-fit: cover;
+    opacity: 0.1;
     position: absolute;
-    z-index: -1;
 }
 
-.card:hover .card-background {
-    opacity: 0.05;
-}
-
-.card-body {
+.card {
+    border: 0.25em solid #3f3f3f;
+    box-shadow: 0.5em 0.5em #7f7f7f7f;
     display: flex;
     flex-direction: column;
     align-items: center;
-    opacity: 0;
-    width: 60%;
-}
-
-.card:hover .card-body {
-    opacity: 1;
-}
-
-.card-body, .card-background {
-    transition: opacity 150ms ease-in-out;
+    padding: 1.5em;
+    position: relative;
 }
 
 .card-title {
-    font-size: calc(0.8rem + 3vw);
-}
-
-.card-text {
-    font-size: calc(0.5rem + 1.8vw);
-    margin-bottom: 0.5rem;
-}
-
-.card-title, .card-text {
+    font-size: 1.5em;
+    font-weight: 900;
     text-align: center;
 }
 
-#price-tracker .card-background {
-    background: url("img/pricetracker_square.svg") center center/cover;
-}
-
-#sopars-de-duro .card-background {
-    background: url("img/soparsdeduro.png") no-repeat center/contain;
-}
-
-#infection-simulator .card-background {
-    background: url("img/infectionsimulator.svg") no-repeat center;
-    background-size: 60%;
-}
-
-#fipsy-fpga-programmer .card-background {
-    background: url("img/fipsyfpgaprogrammer.png") no-repeat center;
-    background-size: 60%;
+.card-text {
+    margin-bottom: 0.5em;
 }
 
 .btn-group {
@@ -210,7 +201,7 @@ a, .btn {
 
 .code-btn {
     background: #2f7fcf;
-    margin-right: 0.2rem;
+    margin-right: var(--card-btn-margin);
 }
 
 .code-btn:hover {
@@ -219,7 +210,7 @@ a, .btn {
 
 .demo-btn {
     background: #7fcf2f;
-    margin-left: 0.2rem;
+    margin-left: var(--card-btn-margin);
 }
 
 .demo-btn:hover {
@@ -228,7 +219,7 @@ a, .btn {
 
 .thesis-btn {
     background: #b42fcf;
-    margin: 0 0.2rem;
+    margin: 0 var(--card-btn-margin);
 }
 
 .thesis-btn:hover {
@@ -237,7 +228,7 @@ a, .btn {
 
 .video-btn {
     background: #cf4b2f;
-    margin-left: 0.2rem;
+    margin-left: var(--card-btn-margin);
 }
 
 .video-btn:hover {
@@ -245,22 +236,30 @@ a, .btn {
 }
 
 
-#contact p {
+#contact > .container {
+    max-width: 30em;
+}
+
+.container > p {
+    background: #fff;
+    padding: 0.5em 0.75em;
     text-align: center;
-    width: calc(5rem + 48vw);
-    max-width: 30rem;
 }
 
 #contactForm {
-    margin-bottom: 2rem;
-    width: calc(8rem + 48vw);
-    max-width: 32rem;
+    margin-bottom: 2em;
+    width: 100%;
 }
 
 #contactForm > div {
     display: flex;
     flex-direction: column;
-    margin: 1.5rem 0;
+    margin: 1.5em 0;
+}
+
+#contactForm > .btn {
+    box-shadow: var(--secondary-box-shadow);
+    margin-top: 2.5em;
 }
 
 form label {
@@ -268,10 +267,11 @@ form label {
 }
 
 form input, form textarea {
-    border: 1px solid #7f7f7f;
+    border: 0.1em solid #3f3f3f;
     border-radius: 0;
-    font-family: "Rosa Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-size: 1rem;
+    box-shadow: var(--secondary-box-shadow);
+    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 1em;
     padding: 0.75em;
 }
 
@@ -284,10 +284,10 @@ form input, form textarea {
 }
 
 .copy-text {
-    border: 1px solid #3f3f3f;
+    border: 0.1em solid #3f3f3f;
     display: flex;
     position: relative;
-    margin: 0.75rem 0;
+    margin: 0.5em 0;
 }
 
 .email {
@@ -302,10 +302,10 @@ form input, form textarea {
 }
 
 .contact-info {
-    background: #ffffff;
+    background: #fff;
     border: 0;
     box-sizing: border-box;
-    color: #000000;
+    color: #000;
     font-family: "Roboto Mono", monospace;
     font-weight: 300;
     font-size: 0.833em;
@@ -341,15 +341,14 @@ footer {
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin: 4rem 0;
+    margin: 4em 0;
 }
 
 footer a {
-    height: 2rem;
-    width: 2rem;
-    margin: 0.5rem;
+    height: 2em;
+    width: 2em;
+    margin: 1em;
     opacity: 0.6;
-    padding: 0.5rem;
 }
 
 footer a:hover {
@@ -361,6 +360,7 @@ footer a:hover {
     width: 100%;
 }
 
+
 #backgroundCanvas {
     position: fixed;
     top: 0;
@@ -369,8 +369,11 @@ footer a:hover {
 }
 
 
+
+
 @media screen and (min-width: 736px) {
     body {
+        font-size: 1rem;
         margin: 0;
     }
 
@@ -379,12 +382,11 @@ footer a:hover {
     }
 
     .section__title {
-        font-size: 3.6rem;
-        margin: 4.2rem 0;
+        font-size: 3em;
     }
 
     .container {
-        width: calc(8rem + 50vw);
+        width: calc(8em + 50vw);
     }
 
     #hero > .container {
@@ -392,77 +394,114 @@ footer a:hover {
     }
 
     #name {
-        font-size: 6rem;
+        font-size: 4em;
     }
-    
+
     #profession {
-        font-size: 1.5rem;
-        margin: 1.5rem 0;
+        font-size: 1.5em;
+    }
+
+    .project {
+        background: unset;
+        display: grid;
+        align-items: center;
+        grid-template-columns: repeat(12, 1fr);
+    }
+
+    .project:nth-child(odd) .card {
+        grid-column: 1 / 8;
+    }
+
+    .project:nth-child(even) .project-img {
+        grid-column: 1 / 7;
+    }
+
+    .project:nth-child(odd) .project-img {
+        grid-column: 7 / -1;
+    }
+
+    .project:nth-child(even) .card {
+        grid-column: 6 / -1;
+    }
+
+    .project-img, .card {
+        grid-row: 1 / 2;
+    }
+
+    .project-img {
+        opacity: 0.9;
+        position: unset;
+        height: unset;
     }
 
     .card {
-        justify-content: space-between;
-        height: 24rem;
-        margin: 2rem 0;
-    }
-
-    .reverse {
-        flex-direction: row-reverse;
-    }
-
-    .card > * {
-        width: 47%;
-    }
-
-    .card-background {
-        position: unset;
-        z-index: unset;
-    }
-
-    .card:hover .card-background {
-        opacity: unset;
-    }
-
-    .card-body {
         align-items: unset;
-        opacity: unset;
-    }
-
-    .card:hover .card-body {
-        opacity: unset;
+        background: #fff;
     }
 
     .card-title {
-        font-size: 1.5rem;
         text-align: unset;
     }
-    
-    .card-text {
-        font-size: 1rem;
-        text-align: start;
+}
+
+
+
+
+@media screen and (min-width: 992px) {
+    .project:nth-child(odd) .card {
+        grid-column: 1 / 7;
+    }
+
+    .project:nth-child(even) .project-img {
+        grid-column: 1 / 8;
+    }
+
+    .project:nth-child(odd) .project-img {
+        grid-column: 6 / -1;
+    }
+
+    .project:nth-child(even) .card {
+        grid-column: 7 / -1;
     }
 }
 
 
-@media screen and (min-width: 1200px) {
-    #price-tracker .card-background {
-        background: url("img/pricetracker.svg") center center/cover;
-    }
-}
 
 
 @media screen and (min-width: 1800px) {
-    html {
+    body {
         font-size: 1.2rem;
     }
 }
 
 
+
+
 @media screen and (min-width: 2400px) {
-    html {
+    body {
         font-size: 1.5rem;
     }
 }
+
+
+
+
+@media screen and (min-width: 3000px) {
+    body {
+        font-size: 1.8rem;
+    }
+}
+
+
+
+
+@media screen and (min-width: 3600px) {
+    body {
+        font-size: 2rem;
+    }
+}
+
+
 
 
 body {
