--- a/styles.css
+++ b/styles.css
@@ -1,510 +1,357 @@
-@font-face {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 900;
-    font-display: swap;
-    src: url(./fonts/Inter-Black.woff2) format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(./fonts/Inter-Regular.woff2) format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-    font-family: "Roboto Mono";
-    font-style: normal;
-    font-weight: 300;
-    font-display: swap;
-    src: url(./fonts/RobotoMono-normal.woff2) format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-:root {
-    --secondary-box-shadow: 0.25em 0.25em #7f7f7f7f;
-    --card-btn-margin: 0.2em;
-}
-
-* {
-    box-sizing: border-box;
-}
-
 html {
-    scroll-behavior: smooth;
+  font-size: max(1rem, 1vw);
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-size: calc(0.3rem + 3vw);
-    font-weight: 400;
-    line-height: 1.5;
-    margin: 0 0 3em 0;
-    transition: opacity 2s ease-in-out;
+  background: #efefef;
+  font-family: 'Outfit', sans-serif;
+  line-height: 1.5;
+  margin: 0;
+  transition: opacity 800ms ease-in-out;
 }
 
 header {
-    background: #fffffff7;
-    position: fixed;
-    bottom: 0;
-    height: 3em;
-    width: 100%;
-    z-index: 9;
+  backdrop-filter: blur(0.2rem);
+  background: #efefeff7;
+  height: 3em;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9;
 }
 
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: auto;
-    height: 100%;
-    width: calc(10em + 28vw);
-    max-width: 20em;
+  align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  height: 100%;
+  margin: auto;
+  max-width: 40rem;
 }
 
-.nav__link:hover {
-    color: #3f3f3f;
+nav > a {
+  color: #3f3f3f;
+  padding: 0.5em 0.75em;
+  text-align: center;
+}
+
+nav > a:hover {
+  color: #000;
+}
+
+button,
+input,
+textarea {
+  font-family: inherit;
+}
+
+main {
+  padding: 0 5vw;
+}
+
+#about-me,
+#my-work > :not(:last-child),
+#my-work > :last-child > :not(.projects),
+.project > *,
+#contact {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 40rem;
+}
+
+h1 {
+  font-size: 2.5em;
+  margin: 0 0 4rem 0;
+  padding-top: 8rem;
+  text-align: center;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.5em;
 }
 
 a {
-    color: #7f7f7f;
-    text-decoration: none;
+  text-decoration: none;
 }
 
-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+a,
+button,
+.button {
+  transition: background 80ms ease-in-out, color 80ms ease-in-out, opacity 80ms ease-in-out;
 }
 
-.section__title {
-    font-size: 2.5em;
-    font-weight: 900;
-    padding: 1em 0;
-    text-align: center;
-    width: 100%;
+button,
+.button {
+  border: 0;
+  color: #ffffff;
+  cursor: pointer;
+  display: grid;
+  font-size: 1em;
+  font-family: 'Roboto Mono', monospace;
+  padding: 1em 1.5em;
+  place-items: center;
+  text-align: center;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80%;
+.primary {
+  background: #3f3f3f;
+}
+
+.primary:hover {
+  background: #000;
+}
+
+.secondary {
+  border: #000 0.1rem solid;
+  color: #000;
+}
+
+.secondary:hover {
+  background: #fff;
+}
+
+button:disabled,
+.button:disabled {
+  background: #bfbfbf;
+  cursor: unset;
+}
+
+.button-group {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.button-group > button,
+.button-group > .button {
+  box-sizing: border-box;
+  max-width: 12em;
+  width: 60%;
 }
 
 #hero {
-    justify-content: center;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  min-height: 100vh;
 }
 
-#name {
-    font-size: 2em;
-    font-weight: 900;
+.hero-text > * {
+  text-align: center;
 }
 
-#profession {
-    font-family: "Roboto Mono", monospace;
-    font-weight: 300;
-    font-size: 1em;
-    margin: 1em 0;
+.hero-text > h1 {
+  font-size: 3em;
+  margin: 0.5rem 0;
+  padding: 0;
 }
 
-.btn {
-    background: #3f3f3f;
-    border: 0;
-    color: #ffffff;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    font-family: "Roboto Mono", monospace;
-    font-size: min(1em, 4vw);
-    font-weight: 300;
-    line-height: unset;
-    padding: 0.5em 1em;
+.hero-text > div {
+  color: #3f3f3f;
+  font-size: 1.5em;
 }
 
-.btn:hover {
-    background: #000000;
+#my-work > div {
+  margin-bottom: 4rem;
 }
 
-.btn:disabled {
-    background: #bfbfbf;
-    cursor: unset;
+.timeline {
+  margin-bottom: 1rem;
 }
 
-a, .btn {
-    transition: background 80ms ease-in-out,
-    color 80ms ease-in-out,
-    opacity 80ms ease-in-out;
+.labels {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
 }
 
-.my-projects-btn {
-    box-shadow: var(--secondary-box-shadow);
-    margin-top: 2em;
-    padding-right: 0.5em;
-    transition: background 80ms ease-in-out,
-    opacity 500ms ease-in-out;
+.timeline > .line {
+  display: flex;
 }
 
-.my-projects-btn:hover {
-    background: #000;
+.timeline > .line > *,
+.pagination > * {
+  height: 1.5rem;
 }
 
-.my-projects-btn svg {
-    height: 1.5em;
-    width: 1.5em;
-    margin-left: 1em;
+.timeline > .line > svg {
+  flex-grow: 1;
+  margin: 0 -0.15rem;
+}
+
+.job-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.job-title > a {
+  width: 5em;
+}
+
+.job-title > a > img {
+  filter: grayscale();
+}
+
+ul {
+  padding: 0 0 0 1.5em;
+}
+
+li {
+  margin: 0.75em 0;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+}
+
+.pagination > * {
+  margin: 0 1rem;
+  width: 1.5em;
+}
+
+.pagination > * > svg > circle {
+  transition: fill-opacity 300ms ease;
+}
+
+.pagination > *.active > svg > circle {
+  fill-opacity: 1;
+}
+
+.projects {
+  display: flex;
+  margin: 0 -5vw;
+  overflow: auto;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.projects::-webkit-scrollbar {
+  display: none;
 }
 
 .project {
-    background: #fff;
-    margin: 4em 0;
-    position: relative;
+  margin: 0.4rem 5vw;
+  min-width: calc(100% - 10vw);
+  scroll-snap-align: center;
 }
 
-.project-img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    opacity: 0.1;
-    position: absolute;
+.project-header {
+  display: grid;
+  place-items: center;
+  position: relative;
 }
 
-.card {
-    border: 0.25em solid #3f3f3f;
-    box-shadow: 0.5em 0.5em #7f7f7f7f;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1.5em;
-    position: relative;
+.project-header > img {
+  filter: blur(0.2rem);
+  opacity: 0.2;
+  width: 100%;
 }
 
-.card-title {
-    font-size: 1.5em;
-    font-weight: 900;
-    text-align: center;
+.project-header > h3 {
+  margin: 1rem;
+  position: absolute;
+  text-align: center;
 }
 
-.card-text {
-    margin-bottom: 0.5em;
+.project-description {
+  margin: 2rem auto;
 }
 
-.btn-group {
-    display: flex;
+#contact > p {
+  margin: 2rem 0;
+  text-align: center;
 }
 
-.code-btn {
-    background: #2f7fcf;
-    margin-right: var(--card-btn-margin);
-}
-
-.code-btn:hover {
-    background: #235f9b;
-}
-
-.demo-btn {
-    background: #7fcf2f;
-    margin-left: var(--card-btn-margin);
-}
-
-.demo-btn:hover {
-    background: #5f9b23;
-}
-
-.thesis-btn {
-    background: #b42fcf;
-    margin: 0 var(--card-btn-margin);
-}
-
-.thesis-btn:hover {
-    background: #87239b;
-}
-
-.video-btn {
-    background: #cf4b2f;
-    margin-left: var(--card-btn-margin);
-}
-
-.video-btn:hover {
-    background: #9b3823;
-}
-
-
-#contact > .container {
-    max-width: 30em;
-}
-
-.container > p {
-    background: #fff;
-    padding: 0.5em 0.75em;
-    text-align: center;
-}
-
-#contactForm {
-    margin-bottom: 2em;
-    width: 100%;
-}
-
-#contactForm > div {
-    display: flex;
-    flex-direction: column;
-    margin: 1.5em 0;
-}
-
-#contactForm > .btn {
-    box-shadow: var(--secondary-box-shadow);
-    margin-top: 2.5em;
+form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 4rem;
 }
 
 form label {
-    margin: 0.25em 0;
+  margin: 0.25rem 0;
 }
 
-form input, form textarea {
-    border: 0.1em solid #3f3f3f;
-    border-radius: 0;
-    box-shadow: var(--secondary-box-shadow);
-    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-size: 1em;
-    padding: 0.75em;
+form input,
+form textarea {
+  border: 0;
+  font-size: 1em;
+  margin: 0 0 1rem 0;
+  padding: 0.75em;
 }
 
-.success {
-    color: #5f9b23;
+form button {
+  margin: 0.25rem 0;
+}
+
+#formFeedback {
+  margin-top: 1rem;
+  text-align: center;
 }
 
 .error {
-    color: #9b3823;
+  color: #bf0000;
 }
 
-.copy-text {
-    border: 0.1em solid #3f3f3f;
-    display: flex;
-    position: relative;
-    margin: 0.5em 0;
+.copyable-text-group {
+  margin: auto;
+  width: max-content;
 }
 
-.email {
-    position: relative;
-    width: 14em;
+.copyable-text {
+  display: flex;
+  margin: 0.5rem auto;
 }
 
 .contact-link {
-    height: 100%;
-    position: absolute;
-    width: 100%;
-}
-
-.contact-info {
-    background: #fff;
-    border: 0;
-    box-sizing: border-box;
-    color: #000;
-    font-family: "Roboto Mono", monospace;
-    font-weight: 300;
-    font-size: 0.833em;
-    height: 100%;
-    outline: none;
-    padding: 0.5em;
-    text-align: right;
-    width: 100%;
-}
-
-.contact-info::selection {
-    background: transparent;
+  align-items: center;
+  background: #fff;
+  color: #000;
+  display: flex;
+  flex-grow: 1;
+  font-family: 'Roboto Mono', monospace;
+  font-size: min(3.6vw, 1em);
+  justify-content: end;
+  padding: 0.75em;
 }
 
 .copy-button {
-    display: flex;
-    align-items: center;
-    background: #3f3f3f;
-    border: 0;
-    color: #ffffff;
-    cursor: pointer;
-    padding: 0.25em 0.5em;
+  align-items: center;
+  display: flex;
+  padding: 0.75em;
 }
 
 .copy-button svg {
-    height: 1.5em;
-    width: 1.5em;
+  height: 1.5em;
+  width: 1.5em;
 }
 
-
 footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    margin: 4em 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 4rem 0;
 }
 
 footer a {
-    height: 2em;
-    width: 2em;
-    margin: 1em;
-    opacity: 0.6;
+  height: 2em;
+  width: 2em;
+  margin: 1rem;
+  opacity: 0.6;
 }
 
 footer a:hover {
-    opacity: 1;
-}
-
-.logo-icon {
-    height: 100%;
-    width: 100%;
-}
-
-
-#backgroundCanvas {
-    position: fixed;
-    top: 0;
-    transition: opacity 2s ease-in-out;
-    z-index: -9;
-}
-
-
-
-
-@media screen and (min-width: 736px) {
-    body {
-        font-size: 1rem;
-        margin: 0;
-    }
-
-    header {
-        bottom: unset;
-    }
-
-    .section__title {
-        font-size: 3em;
-    }
-
-    .container {
-        width: calc(8em + 50vw);
-    }
-
-    #hero > .container {
-        align-items: flex-start;
-    }
-
-    #name {
-        font-size: 4em;
-    }
-
-    #profession {
-        font-size: 1.5em;
-    }
-
-    .project {
-        background: unset;
-        display: grid;
-        align-items: center;
-        grid-template-columns: repeat(12, 1fr);
-    }
-
-    .project:nth-child(odd) .card {
-        grid-column: 1 / 8;
-    }
-
-    .project:nth-child(even) .project-img {
-        grid-column: 1 / 7;
-    }
-
-    .project:nth-child(odd) .project-img {
-        grid-column: 7 / -1;
-    }
-
-    .project:nth-child(even) .card {
-        grid-column: 6 / -1;
-    }
-
-    .project-img, .card {
-        grid-row: 1 / 2;
-    }
-
-    .project-img {
-        opacity: 0.9;
-        position: unset;
-        height: unset;
-    }
-
-    .card {
-        align-items: unset;
-        background: #fff;
-    }
-
-    .card-title {
-        text-align: unset;
-    }
-}
-
-
-
-
-@media screen and (min-width: 992px) {
-    .project:nth-child(odd) .card {
-        grid-column: 1 / 7;
-    }
-
-    .project:nth-child(even) .project-img {
-        grid-column: 1 / 8;
-    }
-
-    .project:nth-child(odd) .project-img {
-        grid-column: 6 / -1;
-    }
-
-    .project:nth-child(even) .card {
-        grid-column: 7 / -1;
-    }
-}
-
-
-
-
-@media screen and (min-width: 1800px) {
-    body {
-        font-size: 1.2rem;
-    }
-}
-
-
-
-
-@media screen and (min-width: 2400px) {
-    body {
-        font-size: 1.5rem;
-    }
-}
-
-
-
-
-@media screen and (min-width: 3000px) {
-    body {
-        font-size: 1.8rem;
-    }
-}
-
-
-
-
-@media screen and (min-width: 3600px) {
-    body {
-        font-size: 2rem;
-    }
-}
-
-
-
-
-body {
-    visibility: visible;
-    opacity: 1;
+  opacity: 1;
 }
